Added the JSLint plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/delimitMate"]
 	path = vim/bundle/delimitMate
 	url = https://github.com/Raimondi/delimitMate.git
+[submodule "vim/bundle/JSLint"]
+	path = vim/bundle/JSLint
+	url = https://github.com/hallettj/jslint.vim.git
